--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "kawasan-nft",
-  "version": "0.1.0",
+  "name": "memora-nft",
+  "version": "0.1.1",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
@@ -9,18 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.0.3"
+    "next": "^15.0.3",
+    "react": "^18.3",
+    "react-dom": "^18.3",
+    "thirdweb": "^5"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^9",
+    "eslint-config-next": "^15.0.3",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.3"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
